vault/consul-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ui
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.provider: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
    - host: consul.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul-consul-ui 
                port:
                  number: 80
